[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wrwc"
version = "0.0.1"
description = "Water quality analysis for teh Woonasquatucket River Watershed Coucil"
authors = [
  { name = "George Dang" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "geopandas>=1.0.1",
    "ipython",
    "ipywidgets>=8.1.5",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "plotly>=6.0.1",
    "python-dotenv",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mkdocs",
]

[tool.ruff]
line-length = 99
src = ["wrwc"]
include = ["pyproject.toml", "wrwc/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["wrwc"]
force-sort-within-sections = true

